# covid-19-graphql

./: Cargo.toml  README.md  rusty-hook.toml
src/: main.rs  schema.rs
