[package]
name = "covid-19-graphql"
version = "0.1.0"
authors = ["Patrick Coffey <patrickcoffey48@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-hook = "^0.11.2"
juniper = "0.14.2"
actix-web = "3"
env_logger = "0.7.1"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"